--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This is a simple tool to generate a dictionary of passwords from other dictionaries you input and sorted by frequency.
+make sure that you give the file execute privs before trying it. (chmod +x whatever)
+this program also taught me the importance of repositories.
