--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 This is a simple tool that takes a folder of dictionaries and password dumps and outputs a list of those passwords sorted by frequency to a file
+
 make sure that you give the file execute privs before trying it. (chmod +x whatever)
 this program also taught me the importance of repositories.
 
 
-#version 0.2
-no syntactic errors, but the output is incorrect
+#version 0.3
+output still incorrect
