--- a/README
+++ b/README
@@ -1,8 +1,12 @@
-This is a simple tool that takes a folder of dictionaries and password dumps and outputs a list of those passwords sorted by frequency to a file
-
-make sure that you give the file execute privs before trying it. (chmod +x whatever)
-this program also taught me the importance of repositories.
-
-
 #version 1
 first functional release
+#
+Gets a list of .txt files in the current directory and ouputs a file with those lines sorted by frequency
+
+put matrix.rb in the directory and then call it with ./matrix.rb
+if it doesn't work make sure matrix.rb has execute privledges
+matrix will ask what you want the file to be called, then close
+#
+written by Cooper LeBrun with help from; Gavin Knight, Zephyr Pellerin.
+
+Please email any bugs, feature requests, whatever too aerowolf01@gmail.com
